--- a/asahi-linux/waybar/style/[Colorful] Rainbow Spectrum.css
+++ b/asahi-linux/waybar/style/[Colorful] Rainbow Spectrum.css
@@ -114,7 +114,14 @@ tooltip label{
 }
 
 #battery {
-	background-color: #f9e2af;
+  	background-color: #d9e0ee;
+  	color: #3A3B3C;
+    box-shadow: none;
+	text-shadow: none;
+    padding: 0px;
+    border-radius: 9px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 @keyframes blink {
@@ -158,7 +165,14 @@ tooltip label{
 }
 
 #tray {
-	background-color: #b4befe;
+  	background-color: #d9e0ee;
+  	color: #3A3B3C;
+    box-shadow: none;
+	text-shadow: none;
+    padding: 0px;
+    border-radius: 9px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 #tray > .passive {
 		-gtk-icon-effect: dim;
@@ -242,13 +256,22 @@ tooltip label{
 	background-color: #94e2d5;
 }
 
-#custom-swaync,
+#custom-swaync {
+  	background-color: #d9e0ee;
+  	color: #3A3B3C;
+    box-shadow: none;
+	text-shadow: none;
+    padding: 0px;
+    border-radius: 9px;
+    padding-left: 4px;
+    padding-right: 4px;
+}
 #custom-weather {
-	background-color: #cba6f7;
+	background-color: #f9e2af;
 }
 
 #wireplumber {
-	background-color: #a6e3a1;
+	background-color: #f9e2af;
 }
 
 #wireplumber.muted {
@@ -257,7 +280,7 @@ tooltip label{
 }
 
 #custom-lock {
-	background-color: #89dceb;
+	background-color: #f9e2af;
 }
 
 #temperature {
@@ -275,19 +298,33 @@ tooltip label{
 }
 
 #bluetooth {
-	background-color: #89dceb;
+  	background-color: #d9e0ee;
+  	color: #3A3B3C;
+    box-shadow: none;
+	text-shadow: none;
+    padding: 0px;
+    border-radius: 9px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 #window {
-	background-color: #89dceb;
+	background-color: #f9e2af;
 }
 
 #custom-keybinds,
 #pulseaudio {
-	background-color: #fab387;
+  	background-color: #d9e0ee;
+  	color: #3A3B3C;
+    box-shadow: none;
+	text-shadow: none;
+    padding: 0px;
+    border-radius: 9px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 #pulseaudio.bluetooth {
-	background-color: #f5c2e7;
+	background-color: #f9e2af;
 }
 #pulseaudio.muted {
 	background-color: #313244;
@@ -295,7 +332,7 @@ tooltip label{
 }
 
 #network {
-	background-color: #89b4fa;
+	background-color: #f9e2af;
 }
 #network.disconnected,#network.disabled {
 	background-color: #313244;
