--- a/waybar/style.css
+++ b/waybar/style.css
@@ -22,39 +22,38 @@
 @define-color grey1 #859289;
 @define-color grey2 #9da9a0;
 
-* {
-  font-family: JetBrainsMono Nerd Font, FontAwesome;
-  font-size: 16px;
-  font-weight: bold;
-}
-
 window#waybar {
-  background-color: @fg;
-  color: @bg0;
-  transition-property: background-color;
-  transition-duration: 0.5s;
-    border-radius: 10px;
-  transition-duration: .5s;
+    font-family: JetBrainsMono Nerd Font, FontAwesome;
+    font-size: 16px;
+    font-weight: bold;
 
-    opacity: 0.8;
+    background-color: @fg;
+    color: @bg0;
+
+    transition-property: background-color;
+    transition-duration: 0.5s;
+    transition-duration: .5s;
+
+    border-radius: 10px;
+    
+    opacity: 0.9;
 }
 
 #clock,
 #clock-date,
-#hyprland-workspaces,
 #pulseaudio,
 #network {
-  background-color: @bg0;
-  color: @fg;
+    background-color: @bg0;
+    color: @fg;
 
     padding: 5px 10px 5px 10px;
-  margin-top: 7px;
-  margin-bottom: 7px;
-	border-radius: 10px;
+    margin-top: 7px;
+    margin-bottom: 7px;
+    border-radius: 10px;
 }
 
 #clock {
-  margin-left: 10px;
+    margin-left: 10px;
 }
 
 #network {
@@ -63,14 +62,35 @@ window#waybar {
 }
 
 #workspaces {
-  padding: 0px;
+    margin-top: 7px;
+    margin-bottom: 7px;
+    padding: 3px 8px; 
+
+    background-color: transparent;
+
+    border: 2px solid @bg0;
+    border-radius: 30px;
+}
+
+#workspaces button {
+    font-family: JetBrainsMono Nerd Font, FontAwesome;
+    font-size: 20px;
+
+    padding: 5px 10px;
+
+    border-radius: 50px;
+
+    color: #d9e0ee;
+    background-color: @bg0;
+
+    /* animation: gradient_f 20s ease-in infinite; */
+    /* transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682); */
 }
 
 #workspaces button.active {
-  background-color: @bg0;
-  color: @fg;
-      margin: 10px;
-      min-width: 20px;
+    background-color: @purple;
+    /* background-color: @orange; */
+    color: @bg0;
 
-	border-radius: 50px;
+    padding: 5px;
 }
