--- a/vm-fedora/waybar/style.css
+++ b/vm-fedora/waybar/style.css
@@ -74,7 +74,7 @@ window#waybar {
 
 #workspaces button {
     font-family: JetBrainsMono Nerd Font, FontAwesome;
-    font-size: 20px;
+    /* font-size: 15px; */
 
     padding: 5px 10px;
 
