[ master ] - asahi-linux, solved waybar and tmux pywal color bug.

--- a/asahi-linux/dot_configs/waybar/style.css
+++ b/asahi-linux/dot_configs/waybar/style.css
@@ -1,4 +1,4 @@
-@import url("/home/wison/.cache/wal/colors-waybar.css");
+@import url("/home/fion/.cache/wal/colors-waybar.css");
 
 * {
     border: none;
