--- a/asahi-linux/dot_configs/waybar/style.css
+++ b/asahi-linux/dot_configs/waybar/style.css
@@ -20,6 +20,7 @@ window#waybar.hidden {
 
 #workspaces {
     margin-left: 10px;
+    margin-right: 10px;
     border-radius: 10px;
     transition: none;
     background: @background;
@@ -43,6 +44,27 @@ window#waybar.hidden {
     font-size: 30px;
 }
 
+#custom-random-wallpaper {
+    margin-right: 8px;
+    padding: 10px 10px 10px 15px;
+    border-radius: 10px;
+    transition: none;
+    color: @color4;
+    background: @background;
+    opacity: 0.9;
+}
+
+#cpu {
+    margin-right: 8px;
+    padding: 10px 10px 10px 15px;
+    border-radius: 10px;
+    transition: none;
+    color: @color4;
+    background: @background;
+    opacity: 0.9;
+}
+
+
 #clock {
     margin: 0px;
     padding: 10px 30px 10px 30px;
@@ -53,25 +75,7 @@ window#waybar.hidden {
     opacity: 0.9;
 }
 
-#cpu {
-    margin-right: 8px;
-    padding: 10px 15px 10px 15px;
-    border-radius: 10px;
-    transition: none;
-    color: @color3;
-    background: @background;
-    opacity: 0.9;
-}
 
-#custom-random-wallpaper {
-    margin-right: 8px;
-    padding: 10px 15px 10px 15px;
-    border-radius: 10px;
-    transition: none;
-    color: @color4;
-    background: @background;
-    opacity: 0.9;
-}
 
 #network {
     margin-right: 8px;
@@ -108,6 +112,42 @@ window#waybar.hidden {
     background: @background;
     /* color: #ff9f1c; */
 
+}
+
+#battery {
+    margin-right: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 10px;
+    transition: none;
+    color: @color5;
+    background: @background;
+}
+
+#battery.warning {
+    background: @background;
+    color: #ffe64d;
+    /* color: #ff9f1c; */
+}
+
+#battery.critical {
+    background: @background;
+    color: #f44747;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+#backlight {
+    margin-right: 8px;
+    padding: 10px 15px 10px 15px;
+    border-radius: 10px;
+    transition: none;
+    color: @color4;
+    background: @background;
+    opacity: 0.9;
 }
 
 #tray {
